<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SignInActivity"
    android:background="@drawable/dark_background">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:id="@+id/edtPhone"
            android:hint="@string/phone_number"
            android:text="0968437696"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="34sp"
            android:inputType="phone"
            android:layout_height="wrap_content"/>
        <EditText
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:id="@+id/edtPassword"
            android:hint="@string/password"
            android:text="Loc261199@"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="34sp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_weight="2"
                android:buttonTint="@android:color/white"
                android:textSize="15sp"
                android:id="@+id/cbRemember"
                android:textColor="@android:color/white"
                android:text="@string/remember_me"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnForgotPassword"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/forgot_password"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:textColor="@android:color/white"
        android:backgroundTint="@color/btnSignActive"
        android:background="@drawable/button_rounded"
        android:id="@+id/btnSignIn"
        android:text="@string/btnSignIn"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>