<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SignUpActivity"
    android:background="@drawable/dark_background">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:id="@+id/edtPhone"
            android:hint="@string/phone_number"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="34sp"
            android:inputType="phone"
            android:layout_height="wrap_content"/>
        <EditText
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:id="@+id/edtName"
            android:hint="@string/name"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="34sp"
            android:layout_height="wrap_content"/>
        <EditText
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:id="@+id/edtPassword"
            android:hint="@string/password"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="34sp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorAccent"
        android:background="@drawable/button_rounded"
        android:id="@+id/btnSignUp"
        android:text="@string/btnSignUp"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>