<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_background"
    tools:context=".UI.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/logo_eat_it"
            android:layout_width="200dp"
            android:layout_height="200dp"/>
        <TextView
            android:text="@string/slogan"
            android:gravity="center"
            android:id="@+id/txtSlogan"
            android:textColor="@android:color/white"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:id="@+id/btnSign"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnFBLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/button_rounded"
                android:id="@+id/btnSignUp"
                android:layout_weight="1"
                android:text="@string/btnSignUp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Button
                android:textColor="@android:color/white"
                android:backgroundTint="@color/btnSignActive"
                android:background="@drawable/button_rounded"
                android:id="@+id/btnSignIn"
                android:layout_weight="1"
                android:text="@string/btnSignIn"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>